--- a/tsa.html
+++ b/tsa.html
@@ -18,7 +18,7 @@
    padding-bottom: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
-   margin-left: 50px;
+   margin-left: 60px;
    height: 100px;
    width: 90%;
    font-family: 'Montserrat', sans-serif;
@@ -141,18 +141,7 @@ body {
  <img src="images/technology.jpg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
-<h2> <b> About TSA </b> </h2>
-<h4> TSA is a non-profit, national organization of students engaged in science, technology, engineering, and mathematics. </h4>
-<h4> There are middle and highschool members all across the United States. There are also multiple competitions, state-level, and then a national TSA Conference. </h4>
-<h4> It helps teachers meet the criteria for STEM education goals through fun and competitive ways. </h4>
-
-<h2> <b> History </b> </h2>
-<h4> TSA was established in 1978. Since then, almost 4,000,000 students have participated through competitions, community service, leadership oppurtunities, and various other ways. </h4>
-
-<h2> <b> Motto </b> </h2>
-<div class="header" style="align-content: center; width:90%">
-	 <h1> <b> "Learning to lead in a technical world." </b> </h1>
-</div>
+<h4> TSA enhances personal development, leadership, and career opportunities in STEM fields. Members apply and integrate these concepts through intracurricular activities, competitions, and related programs. TSA also helps teachers meet the criteria for STEM education goals through events that include activities, competitions, leadership, and teamwork for students. </h4>	
 	
 	
 <center>
