--- a/tsa.html
+++ b/tsa.html
@@ -142,7 +142,11 @@ body {
 </center>
 
 <h4> TSA enhances personal development, leadership, and career opportunities in STEM fields. Members apply and integrate these concepts through intracurricular activities, competitions, and related programs. TSA also helps teachers meet the criteria for STEM education goals through events that include activities, competitions, leadership, and teamwork for students. </h4>	
-	
+
+<h2> <b> Motto </b> </h2>
+<div class="header" style="align-content: center; width:90%">
+	 <h1> <b> "Learning to lead in a technical world." </b> </h1>
+</div>
 	
 <center>
  <img src="images/tsa_logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
