--- a/about_tsa.html
+++ b/about_tsa.html
@@ -142,22 +142,36 @@ body {
 </center>
 
 <h2> <b> What is TSA? </b> </h2>
-<h4> TSA is a non-profit, national organization of students engaged in science, technology, engineering, and mathematics. </h4>
-<h4> There are middle and highschool members all across the United States. There are also multiple competitions, state-level, and then a national TSA Conference. </h4>
-<h4> It helps teachers meet the criteria for STEM education goals through fun and competitive ways. </h4>
+<h4> TSA is a non-profit, national organization of students engaged in science, technology, engineering, and mathematics. There are middle and highschool members all across the United States. There are also multiple competitions, state-level, and then a national TSA Conference. It helps teachers meet the criteria for STEM education goals through fun and competitive ways. </h4>
 
 <h2> <b> History </b> </h2>
 <h4> TSA was established in 1978. Since then, almost 4,000,000 students have participated through competitions, community service, leadership oppurtunities, and various other ways. </h4>
 
+<div class="header" style="align-content: center; width:90%">
+	 <h1> Our Chapter </h1>
+</div>
 
+<h2> We meet every month to work on projects, and ask questions if needed. There are optinal weekly meetings too. </h2>
+	
+<h4> We have a fundraiser called Eureka. It's a STEM night for elementary and middle schoolers, and every memeber volunteers to help out. </h4>
+	
+<h2> TSA is a lot of fun! </h2>
+
+center>
+ <img src="images/selfie 1.png" style="max-width: 60%; max-height: 50%; padding-right: 25px; display: block; margin:auto" >
+</center>
+	
+center>
+ <img src="images/selfie 2.png" style="max-width: 60%; max-height: 50%; padding-right: 25px; display: block; margin:auto" >
+</center>
+	
 <center>
  <img src="images/tsa_logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="east.html">GO TO FIND INFO ABOUT OUR SCHOOL </a>	
-	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="east.html">GO TO FIND INFO ABOUT OUR SCHOOL </a>		
 <br>
 
 <center>
