--- a/about_tsa.html
+++ b/about_tsa.html
@@ -151,7 +151,7 @@ body {
 	 <h1> Our Chapter </h1>
 </div>
 
-<h2> We meet every month to work on projects, and ask questions if needed. There are optinal weekly meetings too. </h2>
+<h2> We meet every month to work on projects, and ask questions if needed. There are optional weekly meetings too. </h2>
 	
 <h4> We have a fundraiser called Eureka. It's a STEM night for elementary and middle schoolers, and every memeber volunteers to help out. </h4>
 	
