--- a/tsa.html
+++ b/tsa.html
@@ -154,7 +154,7 @@ body {
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="east.html">GO TO FIND INFO ABOUT OUR SCHOOL </a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="east.html">GO TO OUR SCHOOL PAGE </a>	
 	
 <br>
 
