--- a/events.html
+++ b/events.html
@@ -176,7 +176,7 @@ body {
 <h4> Video Game Design (3 Teams per state) </h4>
 <h4> Webmaster (1 Team of 3-5 individuals per chapter) </h4>
 
-<a style= "float:left; color: #db022a; margin-left: 100px" href="https://tsaweb.org/competitions-programs/tsa"> Visit the official TSA website for more information about each of the events.</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #db022a; margin-left: 100px" href="https://tsaweb.org/competitions-programs/tsa"> Visit the official TSA website for more information about each of the events.</a>	
 <br>
 
 
