--- a/tsa.html
+++ b/tsa.html
@@ -54,7 +54,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 50px;
   margin-top: 25px;
@@ -63,7 +63,7 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
   color: #fce8ff; 
@@ -82,7 +82,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 100px;
   margin-top: 20px;
@@ -91,7 +91,7 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
   color: #fce8ff;
@@ -141,7 +141,20 @@ body {
  <img src="images/technology.jpg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
+<h2> <b> Mission Statement </b> </h2>
 <h4> TSA enhances personal development, leadership, and career opportunities in STEM fields. Members apply and integrate these concepts through intracurricular activities, competitions, and related programs. TSA also helps teachers meet the criteria for STEM education goals through events that include activities, competitions, leadership, and teamwork for students. </h4>	
+
+<br>
+	
+<h2> <b> Vision Statement </b> </h2> 
+<h4> TSA is accelerating student achievement and supporting teachers by providing engaging opportunities to develop STEM skills. </h4>
+
+<br>
+	
+<h2> <b> Creed </b> </h2>
+<h4> I believe that Technology Education holds an important place in my life in the technical world. I believe there is a need for the development of good attitudes concerning work, tools, materials, experimentation, and processes of industry. Guided by my teachers, artisans from industry, and my own initiative, I will strive to do my best in making my school, community, state, and nation better places in which to live. I will accept the responsibilities that are mine. I will accept the theories that are supported by proper evidence. I will explore on my own for safer, more effective methods of working and living. I will strive to develop a cooperative attitude and will exercise tact and respect for other individuals. Through the work of my hands and mind, I will express my ideas to the best of my ability. I will make it my goal to do better each day the task before me, and to be steadfast in my belief in my God, and my fellow Americans. </h4>
+
+<br>	
 
 <h2> <b> Motto </b> </h2>
 <div class="header" style="align-content: center; width:90%">
