--- a/about_tsa.html
+++ b/about_tsa.html
@@ -54,7 +54,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 50px;
   margin-top: 25px;
@@ -63,7 +63,7 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
   color: #fce8ff; 
@@ -82,7 +82,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 100px;
   margin-top: 20px;
@@ -91,7 +91,7 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
   color: #fce8ff;
@@ -147,11 +147,11 @@ body {
 	 <h1> Our Chapter </h1>
 </div>
 
-<h2> We meet every month to work on projects, and ask questions if needed. There are optional weekly meetings too. </h2>
+<h2> We meet every month to work on projects, and ask questions if needed. Officers monitor our progress throughout the year, and can offer assistance. Groups can use this time to meet up, discuss, and work on their projects. There are optional weekly meetings too. </h2>
 	
-<h4> We have a fundraiser called Eureka. It's a STEM night for elementary and middle schoolers, and every memeber volunteers to help out. </h4>
+<h4> To raise money for our costs, we have a fundraiser called Eureka. It's a STEM night for elementary and middle schoolers, and every member volunteers to help out. Everyone has a great time. </h4>
 	
-<h2> TSA is a lot of fun! </h2>
+<h2> TSA at our chapter is a lot of fun! </h2>
 
 center>
  <img src="images/selfie 1.png" style="max-width: 60%; max-height: 50%; padding-right: 25px; display: block; margin:auto" >
