--- a/tsa_contacts.html
+++ b/tsa_contacts.html
@@ -54,7 +54,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 50px;
   margin-top: 25px;
@@ -63,9 +63,9 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px; 
+  font-size: 25px; 
   color: #fce8ff; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
@@ -82,7 +82,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 100px;
   margin-top: 20px;
@@ -91,9 +91,9 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px;
+  font-size: 25px;
   color: #fce8ff;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
@@ -136,6 +136,9 @@ body {
   </center>
 </div>
 
+<center>
+ <img src="images/tsa_contacts.jpeg" style="max-width: 50%; max-height: 25%; padding-right: 25px; display: block; margin:auto" >
+</center>
 
 <h2> Our Officers: </h2>
 <h4> President - Ria Kulkarni </h4>
@@ -150,6 +153,8 @@ body {
 <br>
 <br>
 <h2> Follow us on Instagram: downingtowneast_tsa</h2>
+	
+<h4> Tech Support- webmasterEAST@gmail.com </h4>
 
 <br>
 <center>
