--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #f2f2f2;
   margin-left: 50px;
   margin-top: 25px;
@@ -63,9 +63,9 @@ h2 {
 
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px; 
+  font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
@@ -82,7 +82,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #f2f2f2;
   margin-left: 100px;
   margin-top: 20px;
@@ -91,9 +91,9 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px;
+  font-size: 25px;
   color: #ffbcd9;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
@@ -154,7 +154,7 @@ body {
 <h2> Company History </h2>
 <h4> Our company was founded on September 7, 2003, by Jayden Whitney, Dave Busby, Aleesha Ryan, and Braxton Stevens. </h4>
 
-<h2> Headquarters: 123 Sunnyville, California </h2>
+<h2> Headquarters: 123 Ampere Way, Reading, Pennsylvania </h2>
 	
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
