--- a/model_1.html
+++ b/model_1.html
@@ -144,7 +144,7 @@ body {
 
 
 <center>
- <img src="images/TitleCar.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/Roadster.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 
