--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #f2f2f2;
   margin-left: 50px;
   margin-top: 25px;
@@ -61,9 +61,9 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px; 
+  font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
@@ -80,7 +80,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
   color: #f2f2f2;
   margin-left: 100px;
   margin-top: 20px;
@@ -89,9 +89,9 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 18px;
+  font-size: 25px;
   color: #ffbcd9;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
@@ -142,7 +142,9 @@ body {
 </div>
 
 <h2> This website template is orignally built by the Webmaster team at the DEHS chapter. </h2>
-
+<h4> Click here to go to our TSA Chapter: <a href="tsa.html" > <font color="#C891FF"> TSA Chapter </font> </a> </h4>
+<br>
+<h4> Click here to go to our School Page: <a href="east.html" > <font color="#C891FF"> DEHS </font> </a> </h4>
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
