--- a/staff.html
+++ b/staff.html
@@ -159,6 +159,10 @@ body {
 <h2> Mr. Walker </h2>
 <h4> Email: kywalker@dasd.org </h4>
 
+<br>
+<center>
+ <img src="images/logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
+</center>
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
