--- a/model_4.html
+++ b/model_4.html
@@ -54,6 +54,8 @@
 font: 100 24px 'Montserrat', sans-serif;
   background-color: #0CE4D7;
   border: none;
+  margin-left: 150px;
+  margin-right: 150px;
   color: black;
   padding: 15px 25px;
   text-align: center;
@@ -156,11 +158,12 @@ body {
 
 
 <center>
- <img src="images/Jaguar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/Jaguar.jpeg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 <h2> Specs </h2>
-<h4> Fuel: Options:  </h4>
+<h4> Battery Capacity: 60 kWh Lithium-Ion Battery </h4>
+<h4> Range: 200 miles
 	
 <div  class="button">
     <a href="order.html">Order Now!</a>
