--- a/model_4.html
+++ b/model_4.html
@@ -166,7 +166,7 @@ body {
 <h4> Range: 200 miles
 	
 <div  class="button">
-    <a href="order.html">Order Now!</a>
+    <a href="order4.html">Order Now!</a>
 	
 </div>
 
