--- a/order4.html
+++ b/order4.html
@@ -121,6 +121,11 @@ body {
 </head>
 	
 <body>
+<div class="header"> 
+<img src="images/ampere_logo.png"
+	alt="Ampere Logo" align= "top"
+	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"> 
+</div>
 
 <div class="header" style="align-content: center; width:90%">
 	 <h1> <b> Ampere Order Form </b> </h1>
@@ -135,8 +140,44 @@ body {
 </center>
 
 <h2> <b> Order Form </b> </h2>
-<h4> ...  </h4>	
+<br>
+<h4>
+<form>
+  First name:<br>
+  <input type="text" name="firstname"><br><br>
+  Last name:<br>
+  <input type="text" name="lastname">
+  <br> <br>
+  Pick-Up Location:<br>
+  <select name="location"> 
+    <option value="ny">Albany, NY</option>
+    <option value="md">Boston, MD</option>
+    <option value="fl">Ft. Lauderdale, FL</option>
+    <option value="va">Manassas, VA</option>
+    <option value="pa">Philadelphia, PA</option>
+    <option value="pa">Reading, PA</option>
+    <option value="ca">San Francisco, CA</option>
+  </select>
+  <br> <br>
+  Color:<br> 
+  <input type="radio" name="color" value="red"> Red<br>
+  <input type="radio" name="color" value="blue"> Blue<br>
+  <input type="radio" name="color" value="white"> White<br>
+  <input type="radio" name="color" value="gray"> Gray<br>
+  <input type="radio" name="color" value="black"> Black<br>
+  <input type="radio" name="color" value="other"> Other:
+  <input type="text" name="other_color">
 
+  <br> <br>
+  Specific Notes:
+  <div>
+  <textarea name="message" rows="10" cols="30">
+Enter notes in here.
+</textarea>
+ </div> 
+	
+</form>
+</h4>
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
