--- a/order4.html
+++ b/order4.html
@@ -54,7 +54,7 @@
 }
 @media only screen and (max-width: 720px) {
 h2 {
-  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 40px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 50px;
   margin-top: 25px;
@@ -66,7 +66,7 @@ h4 {
   font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 25px; 
-  color: #fce8ff; 
+  color: #560063; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -82,7 +82,7 @@ h6 {
 }
 @media only screen and (min-width: 720px) {
 h2 {
-  font: 100 30px 'Berkshire Swash', Helvetica, sans-serif;
+  font: 100 40px 'Berkshire Swash', Helvetica, sans-serif;
   color: #fce8ff;
   margin-left: 100px;
   margin-top: 20px;
@@ -94,7 +94,7 @@ h4 {
   font: 100 25px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 25px;
-  color: #fce8ff;
+  color: #560063;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -179,9 +179,9 @@ Enter notes in here.
 </form>
 </h4>
 
+<br> <br>
 <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="east.html">GO TO OUR SCHOOL PAGE </a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; float:center; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>		
 	
 <br>
 
