--- a/order4.html
+++ b/order4.html
@@ -181,7 +181,7 @@ Enter notes in here.
 
 <br> <br>
 <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; float:center; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>		
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; align-content:middle; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>		
 	
 <br>
 
