--- a/model_4.html
+++ b/model_4.html
@@ -61,6 +61,8 @@ font: 100 24px 'Montserrat', sans-serif;
   text-align: center;
   font-size: 35px;
   cursor: pointer;
+  clear: both;
+  display: table;
 }
 
 .button:hover {
@@ -78,7 +80,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
@@ -106,7 +108,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px;
   color: #ffbcd9;
   width: 85%;
