--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
@@ -90,7 +90,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px;
   color: #ffbcd9;
   width: 85%;
