--- a/gallery.html
+++ b/gallery.html
@@ -164,13 +164,13 @@ body {
 
 <div class="clearfix">
   <div class="img-container">
-  <img src="TitleCar.jpg" alt="TitleCar" style="width:50%">
+  <img src="TitleCar.jpg" style="width:50%">
   </div>
   <div class="img-container">
-  <img src="Roadster.jpg" alt="Model1" style="width:50%">
+  <img src="Roadster.jpg"  style="width:50%">
   </div>
   <div class="img-container">
-  <img src="Lucid.jpg" alt="Model2" style="width:50%">
+  <img src="Lucid.jpg"  style="width:50%">
   </div>
 </div>
 	
