--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
@@ -92,7 +92,7 @@ h2 {
  }
 h4 {
   font: 100 25px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 25px;
   color: #ffbcd9;
   width: 85%;
