--- a/gallery.html
+++ b/gallery.html
@@ -164,22 +164,22 @@ body {
 
 <div class="clearfix">
   <div class="img-container">
-  <img src="TitleCar.jpg" style="width:50%">
+  <img src="images/TitleCar.jpg"  alt="TitleCar" style="width:50%">
   </div>
   <div class="img-container">
-  <img src="Roadster.jpg"  style="width:50%">
+  <img src="images/Roadster.jpg"  alt="Model1" style="width:50%">
   </div>
   <div class="img-container">
-  <img src="Lucid.jpg"  style="width:50%">
+  <img src="images/Lucid.jpg"  alt="Model2" style="width:50%">
   </div>
 </div>
 	
 <div class="clearfix">
   <div class="img-container">
-  <img src="Lotus.jpg" alt="Model3" style="width:50%">
+  <img src="images/Lotus.jpg" alt="Model3" style="width:50%">
   </div>
   <div class="img-container">
-  <img src="Jaguar.jpeg" alt="Model4" style="width:50%">
+  <img src="images/Jaguar.jpeg" alt="Model4" style="width:50%">
   </div>
 </div>
 	
