--- a/staff.html
+++ b/staff.html
@@ -64,7 +64,7 @@ h2 {
  }
 h4 {
   font: 100 15px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 18px; 
   color: #1184a6; 
   margin-left: 50px; margin-right: 50px; 
@@ -92,7 +92,7 @@ h2 {
  }
 h4 {
   font: 100 15px 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: left;
   font-size: 18px;
   color: #1184a6;
   width: 85%;
