--- a/gallery.html
+++ b/gallery.html
@@ -164,23 +164,39 @@ body {
 
 <div class="clearfix">
   <div class="img-container">
-  <img src="images/TitleCar.jpg"  alt="TitleCar" style="width:100%">
+  <a href="index.html">
+ <img src="images/TitleCar.jpg"  alt="TitleCar" style="width:100%">
+</a>
   </div>
+	
   <div class="img-container">
-  <img src="images/Roadster.jpg"  alt="Model1" style="width:100%">
+ <a href="model_1.html">
+ <img src="images/Roadster.jpg"  alt="Model1" style="width:100%">
+ </a>
   </div>
+	
   <div class="img-container">
+  <a href="model_2.html">
   <img src="images/Lucid.jpg"  alt="Model2" style="width:100%">
+ </a>	  
   </div>
+	
 </div>
 	
 <div class="clearfix">
+  
   <div class="img-container">
+  <a href="model_3.html">
   <img src="images/Lotus.jpg" alt="Model3" style="width:100%">
+ </a>
   </div>
+	
   <div class="img-container">
+  <a href="model_4.html">
   <img src="images/Jaguar.jpeg" alt="Model4" style="width:100%">
+  </a>
   </div>
+
   <div class="img-container">
   <img src="images/Mod_Y.jpg" alt="Model5" style="width:100%">
   </div>
