--- a/order4.html
+++ b/order4.html
@@ -136,7 +136,7 @@ body {
 
 
 <center>
- <img src="images/Jaguar.jpg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/Jaguar.jpg" alt="Model 4" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> <b> Order Form </b> </h2>
