--- a/model_4.html
+++ b/model_4.html
@@ -147,7 +147,6 @@ body {
 <div class="topnav">
   <center>
   <a href="index.html">HOME</a>
-  <a href="gallery.html">GALLERY</a>
   <a href="model_1.html">MODEL 1</a>
   <a href="model_2.html">MODEL 2</a>
   <a href="model_3.html">MODEL 3</a>
@@ -160,12 +159,14 @@ body {
 
 
 <center>
- <img src="images/Jaguar.jpeg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 <h2> Specs </h2>
-<h4> Battery Capacity: 60 kWh Lithium-Ion Battery </h4>
-<h4> Range: 200 miles
+<h2> Battery Type </h2>
+<h4> 60 kWh Lithium-Ion Battery </h4>
+<h2> Range </h2>
+<h4> 200 miles </h4>
 	
 <div  class="button">
     <a href="order4.html">Order Now!</a>
