--- a/news.html
+++ b/news.html
@@ -130,7 +130,6 @@ body {
 <div class="topnav">
   <center>
   <a href="index.html">HOME</a>
-  <a href="gallery.html">GALLERY</a>
   <a href="model_1.html">MODEL 1</a>
   <a href="model_2.html">MODEL 2</a>
   <a href="model_3.html">MODEL 3</a>
@@ -142,16 +141,18 @@ body {
 </div>
 
 <h2> News Updates </h2>
-<h4> 1/4/20 - We are proud to announce new openings in the following locations: </h4>
+<h2> 1/4/20 </h2>
+<h4> We are proud to announce new openings in the following locations: </h4>
 <h4> Philadelphia, PA </h4>
 <h4> Albany, NY </h4>
 <h4> San Francisco, CA </h4>
 <h4> Ft. Lauderdale, FL </h4>
 	
-	
-<h4> 12/31/19 - Happy New Year everyone! Ampere wishes you another wonderful year. </h4>
-	
-<h4> 12/16/19 - It's finally here! Our brand new vehicle: "Model 4"!
+<h2> 12/31/19 </h2>	
+<h4> Happy New Year everyone! Ampere wishes you another wonderful year. </h4>
+
+<h2> 12/16/19 </h2>	
+<h4> It's finally here! Our brand new vehicle: "Model 4"!
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
