--- a/model_4.html
+++ b/model_4.html
@@ -167,9 +167,13 @@ body {
 <h4> 60 kWh Lithium-Ion Battery </h4>
 <h2> Range </h2>
 <h4> 200 miles </h4>
+<h2> Acceleration </h2>
+<h4> 0-60 mph in less than 6 seconds </h4>
+	
+	
 	
 <div  class="button">
-    <a href="order4.html">Order Now!</a>
+    <a href="order_form.html">Order Now!</a>
 	
 </div>
 
