--- a/model_4.html
+++ b/model_4.html
@@ -173,7 +173,7 @@ body {
 	
 	
 <div  class="button">
-    <a href="order_form.html">Order Now!</a>
+    <a href="order_form.html?type=purchase&price=75000">Order Now!</a>
 	
 </div>
 
