--- a/order_form.html
+++ b/order_form.html
@@ -199,13 +199,13 @@ function UpdateOrderPrice()
     <option value="amex">American Express</option>
   </select>
   <br><br>
-  Full Name on Credit Card (First Last):
-  <input type="text" name="fullName" style="height:30px; width: 350px; font-size:12pt;">
+  Full Name (First Last):
+  <input type="text" name="fullName" style="height:30px; width: 300px; font-size:12pt;">
   <br><br>
-  Credit Card Number:
+  Card Number:
   <input type="text" name="cardNumber" style="height:30px; width: 200px; font-size:12pt;">
   <br><br>
-  Credit Card Expiration (MM/YY):
+  Expiration (MM/YY):
   <input type="text" name="cardExpMonth" style="height:30px; width: 30px; font-size:12pt;">
   /
   <input type="text" name="cardExpYear" style="height:30px; width: 30px; font-size:12pt;">
@@ -220,8 +220,8 @@ function UpdateOrderPrice()
   <br><br>
   City:
   <input type="text" name="billingAddressCity" style="height:30px; width: 200px; font-size:12pt;">
-
-  &nbsp; &nbsp; &nbsp;State:
+  <br><br>
+  State:
   <input type="text" name="billingAddressState" style="height:30px; width: 60px; font-size:12pt;">
 
   &nbsp; &nbsp; &nbsp;Zip Code:
@@ -236,7 +236,7 @@ function UpdateOrderPrice()
 
   Specific Notes:<br><br>
   <div>
-  <textarea name="message" rows="10" cols="200">
+  <textarea name="message" rows="10" cols="150">
     Enter any further instructions in here. We will contact you at the provided phone number.
   </textarea>
   </div>
