--- a/order_form.html
+++ b/order_form.html
@@ -227,10 +227,10 @@ function UpdateOrderPrice()
   &nbsp; &nbsp; &nbsp;Zip Code:
   <input type="text" name="billingAddresZipCode" style="height:30px; width: 90px; font-size:12pt;">
   <br><br>
-  Email Address:
+  Email:
   <input type="text" name="emailAddress" style="height:30px; width: 300px; font-size:12pt;">
 
-  &nbsp; &nbsp; &nbsp;Phone Number:
+  &nbsp; &nbsp; Phone Number:
   <input type="text" name="contactNumber" style="height:30px; width: 150px; font-size:12pt;">
   <br><br><br>
 
