--- a/order_feedback.html
+++ b/order_feedback.html
@@ -1,1 +1,141 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+<title> Ampere </title>
+<link rel="icon" type="image/ico" href="favicon.ico" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+<style>
+/* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
+.header {
+   font: 100 20px 'Montserrat', sans-serif;
+   color: #db022a;
+   text-align: center;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+   margin-left: 60px;
+   height: 100px;
+   width: 90%;
+   font-family: 'Montserrat', sans-serif;
+}
+.button {
+font: 100 24px 'Montserrat', sans-serif;
+  background-color: pink;
+  border: none;
+  margin-left: 450px;
+  margin-right: 200px;
+  color: black;
+  padding: 15px 15px;
+  text-align: center;
+  font-size: 35px;
+  cursor: pointer;
+  clear: both;
+  display: table;
+}
+
+.button:hover {
+  background-color: magenta;
+}
+@media only screen and (max-width: 720px) {
+h2 {
+  font: 100 40px 'Berkshire Swash', Helvetica, sans-serif;
+  color: #fce8ff;
+  margin-left: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+ }
+h4 {
+  font: 100 25px 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 25px;
+  color: #560063;
+  margin-left: 50px; margin-right: 50px;
+  margin-bottom: 10px; margin-top: 10px;
+  font-family: 'Montserrat', sans-serif;
+ }
+h6 {
+  font: 100 15px 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: 15px;
+  color: #E72F71;
+  margin-top:50px; margin-bottom:20px;
+  font-family: 'Montserrat', sans-serif;
+ }
+}
+@media only screen and (min-width: 720px) {
+h2 {
+  font: 100 40px 'Berkshire Swash', Helvetica, sans-serif;
+  color: #fce8ff;
+  margin-left: 100px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+ }
+h4 {
+  font: 100 25px 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 25px;
+  color: #560063;
+  width: 85%;
+  margin-left: 100px; margin-right: 50px;
+  margin-right: 10px; margin-bottom: 10px;
+  font-family: 'Montserrat', sans-serif;
+ }
+h6 {
+  font: 100 15px 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: 15px;
+  color: #E72F71;
+  margin-top:50px;
+  margin-bottom:20px;
+  font-family: 'Montserrat', sans-serif;
+ }
+body {
+  background-image: url('images/order_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+}
+
+</style>
+	
+</head>
+
+<body>
+<div class="header">
+<img src="images/ampere_logo.png"
+	alt="Ampere Logo" align= "top"
+	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;">
+</div>
+
+<div class="header" style="align-content: center; width:90%">
+	 <h1> <b> Purchase Confirmed </b> </h1>
+</div>
+
+  <h2> Thank you for shopping with Ampere! We will contact you soon. </h2>
+
+	
+<div  class="button">
+    <a href="index.html"> Home </a>
+	
+</div>
+  
+<br> <br> <br> <br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; align-content:middle; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>
+
+<br>
+
+<center>
+    <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
+</center>
+
+</body>
