--- a/order_form.html
+++ b/order_form.html
@@ -209,7 +209,7 @@ function UpdateOrderPrice()
   <input type="text" name="cardExpMonth" style="height:30px; width: 30px; font-size:12pt;">
   /
   <input type="text" name="cardExpYear" style="height:30px; width: 30px; font-size:12pt;">
-   &nbsp; &nbsp; &nbsp; CVV: <input type="text" name="cardCVV" style="height:30px; width: 50px; font-size:12pt;">
+   &nbsp; &nbsp; CVV: <input type="text" name="cardCVV" style="height:30px; width: 50px; font-size:12pt;">
   <br><br><br>
   Billing/Shipping Address: <br><br>
   Full Name (First Last):
@@ -227,12 +227,12 @@ function UpdateOrderPrice()
   &nbsp; &nbsp; &nbsp;Zip Code:
   <input type="text" name="billingAddresZipCode" style="height:30px; width: 90px; font-size:12pt;">
   <br><br>
-  Email:
+  Email Address:
   <input type="text" name="emailAddress" style="height:30px; width: 300px; font-size:12pt;">
-
-  &nbsp; &nbsp; Phone Number:
+  <br><br>
+  Phone Number:
   <input type="text" name="contactNumber" style="height:30px; width: 150px; font-size:12pt;">
-  <br><br><br>
+  <br><br>
 
   Specific Notes:<br><br>
   <div>
@@ -240,7 +240,7 @@ function UpdateOrderPrice()
     Enter any further instructions in here. We will contact you at the provided phone number.
   </textarea>
   </div>
-  <br>
+  <br><br>
 
     <h5>
       Estimated Delivery: 4-6 weeks.
@@ -258,10 +258,8 @@ function UpdateOrderPrice()
 </form>
 </h4>
 
-
-<br> <br> <br> <br>
+<br> <br> <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; align-content:middle; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>
-
 <br>
 
 <center>
