--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ h4 {
   font-family: 'Montserrat', sans-serif;
  }
 h6 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font:  15px 'Montserrat', sans-serif;
   text-align: center;
   font-size: 15px;
   color: #E72F71;
@@ -99,7 +99,7 @@ h4 {
   font-family: 'Montserrat', sans-serif;
  }
 h6 {
-  font: 100 15px 'Montserrat', sans-serif;
+  font: 15px 'Montserrat', sans-serif;
   text-align: center;
   font-size: 15px;
   color: #E72F71;
