--- a/order_form.html
+++ b/order_form.html
@@ -247,7 +247,7 @@ function UpdateOrderPrice()
     </h5> <br>
 
     <center>
-      <button id="priceInfo" type="button" onclick="UpdateOrderPrice()" style=" font-size:14pt; width:525px; height:60px; padding-left:25px; padding-right:25px; display: block; margin:10px;"> Click to Verify Purchase/Lease/Loan Details! </button>
+      <button id="priceInfo" type="button" onclick="UpdateOrderPrice()" style=" font-size:14pt; width:525px; height:60px; padding-left:25px; padding-right:25px; display: block; margin:10px;"> Click to Place Order! </button>
       <br>
       <div id="div_place_order_button">
       </div>
