--- a/order_form.html
+++ b/order_form.html
@@ -191,7 +191,7 @@ function UpdateOrderPrice()
 
 <h4>
 <form>
-  Select Payment Type:
+  Credit Card Type:
   <select name="paymentType"  style="height:30px; width: 150px; font-size:12pt;">
     <option value="visa">Visa</option>
     <option value="master">Master Card</option>
@@ -203,7 +203,7 @@ function UpdateOrderPrice()
   <input type="text" name="fullName" style="height:30px; width: 300px; font-size:12pt;">
   <br><br>
   Card Number:
-  <input type="text" name="cardNumber" style="height:30px; width: 200px; font-size:12pt;">
+  <input type="text" name="cardNumber" style="height:30px; width: 250px; font-size:12pt;">
   <br><br>
   Expiration (MM/YY):
   <input type="text" name="cardExpMonth" style="height:30px; width: 30px; font-size:12pt;">
@@ -222,7 +222,7 @@ function UpdateOrderPrice()
   <input type="text" name="billingAddressCity" style="height:30px; width: 250px; font-size:12pt;">
   <br><br>
   State:
-  <input type="text" name="billingAddressState" style="height:30px; width: 60px; font-size:12pt;">
+  <input type="text" name="billingAddressState" style="height:30px; width: 100px; font-size:12pt;">
 
   &nbsp; &nbsp; &nbsp;Zip Code:
   <input type="text" name="billingAddresZipCode" style="height:30px; width: 150px; font-size:12pt;">
