--- a/order_form.html
+++ b/order_form.html
@@ -121,8 +121,12 @@ body {
 </style>
 	
 <script>
+var bOrderButtonCreated= false;
 function UpdateOrderPrice()
 {
+    if (bOrderButtonCreated)
+	return;
+    bOrderButtonCreated = true;
     var sPageURL = window.location.search.substring(1);
     var sURLArguments = sPageURL.toString().split('?');
     var sOrderVariables = sURLArguments.toString().split('&');
