--- a/order_feedback.html
+++ b/order_feedback.html
@@ -123,16 +123,16 @@ body {
 
   <h2> Thank you for shopping with Ampere! We will contact you soon. </h2>
 
-	
+<center>	
 <div  class="button">
     <a href="index.html"> Home </a>
 	
 </div>
-  
+</center> 
 <br> <br> <br> <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 25px; align-content:middle; color: #9c7700; margin-left: 50px" href="index.html">GO BACK TO AMPERE</a>
 
-<br>
+
+
 
 <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
