--- a/model_4.html
+++ b/model_4.html
@@ -54,8 +54,6 @@
 font: 100 24px 'Montserrat', sans-serif;
   background-color: #0CE4D7;
   border: none;
-  margin-left: 450px;
-  margin-right: 200px;
   color: black;
   padding: 15px 15px;
   text-align: center;
@@ -171,12 +169,12 @@ body {
 <h4> 0-60 mph in less than 6 seconds </h4>
 	
 	
-	
+<center>	
 <div  class="button">
     <a href="order_form.html?type=purchase&price=75000">Order Now!</a>
-	
 </div>
-
+</center>
+	
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
