--- a/model_4.html
+++ b/model_4.html
@@ -160,15 +160,32 @@ body {
  <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
-<h2> Specs </h2>
+<div class="header" style="align-content: center; width:90%">
+	 <h1> Specs </h1>
+</div>
+	
 <h2> Battery Type </h2>
 <h4> 60 kWh Lithium-Ion Battery </h4>
 <h2> Range </h2>
-<h4> 200 miles </h4>
+<h4> 270 miles </h4>
 <h2> Acceleration </h2>
 <h4> 0-60 mph in less than 6 seconds </h4>
+<h2> Drive </h2>
+<h4> Rear-Wheel Drive </h4>	
+	
+<br><br>
+	
+<div class="header" style="align-content: center; width:90%">
+	 <h2> Interior Features </h2>
+</div>	
+<h2> Seating Capacity </h2>
+<h4> 5 Adults </h4>
 	
 	
+	
+	
+	
+
 <center>	
 <div  class="button">
     <a href="order_form.html?type=purchase&price=75000">Order Now!</a>
