--- a/model_4.html
+++ b/model_4.html
@@ -160,7 +160,7 @@ body {
  <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
-<div class="header" style="align-content: center; width:90%">
+<div class="header" style=" font-size: 40; align-content: center; width:90%">
 	 <h1> Specs </h1>
 </div>
 	
@@ -176,7 +176,7 @@ body {
 <br><br>
 	
 <div class="header" style="align-content: center; width:90%">
-	 <h2> Interior Features </h2>
+	 <h1> Interior Features </h1>
 </div>	
 <h2> Seating Capacity </h2>
 <h4> 5 Adults </h4>
