--- a/model_4.html
+++ b/model_4.html
@@ -160,9 +160,11 @@ body {
  <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
+<center>	
 <div class="header" style=" font-size: 40; align-content: center; width:90%">
 	 <h1> Specs </h1>
 </div>
+</center>
 	
 <h2> Battery Type </h2>
 <h4> 60 kWh Lithium-Ion Battery </h4>
@@ -180,8 +182,14 @@ body {
 </div>	
 <h2> Seating Capacity </h2>
 <h4> 5 Adults </h4>
-	
-	
+<h2> Seats </h2>
+<h4> Front adjustable seats</h4>
+<h4> Premium leather material </h4>
+<h4> 4 USB ports  </h4>
+<h2> Sound </h2>
+<h4> Front and rear speakers </h4>
+<h4> Bluetooth connection </h4>	
+
 	
 	
 	
