--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body {
 
 
 <center>
- <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/Owl.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 <h2> Our Goal: </h2>
@@ -153,7 +153,6 @@ body {
 <h2> Company History </h2>
 <h4> Our company was founded on September 7, 2003, by Jayden Whitney, Dave Busby, Aleesha Ryan, and Braxton Stevens. </h4>
 
-<h2> Headquarters: 123 Ampere Way, Reading, Pennsylvania </h2>
 	
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
