--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,7 @@ body {
 <h2> Questions? Contact Us! </h2>
 <h4> Email: ampereoutlet2020@gmail.com </h4>
 <h4> Phone: 123-456-7890 </h4>
-
+<h4> Headquarters: 123 Ampere Way, Reading, Pennsylvania </h4>
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
