--- a/model_1.html
+++ b/model_1.html
@@ -143,7 +143,7 @@ body {
 
 
 <center>
- <img src="images/Roadster.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/renault-car.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 
